<resources>
    <string name="app_name">TinkoffProject</string>
    <string name="app_name2">Lifestyle</string>
    <string name="squirrels">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="remained">Осталось(ккал)</string>
    <string name="water">Воды выпито:</string>
    <string name="breakfast">Завтрак</string>
    <string name="dinner1">Обед</string>
    <string name="dinner2">Ужин</string>
    <string name="snacks">Перекусы</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="notification">Уведомления</string>
    <string name="language">Язык</string>
    <string name="theme">Тема</string>
    <string name="profile">Профиль</string>
    <string name="name">Имя</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес:</string>
    <string name="height">Рост:</string>
    <string name="gender">Пол:</string>
    <string name="profileInformation">Личная информация:</string>
    <string name="moreInfoProduct">Подробная информация</string>
    <string name="productName">Название блюда:</string>
    <string name="microElements">Микроэлементы:</string>
    <string name="calcium">Кальций:</string>
    <string name="cholesterol">Холестирин:</string>
    <string name="calories">Калории:</string>
    <string name="fat">Жиры:</string>
    <string name="protein">Белки:</string>
    <string name="carbohydrate">Углеводы:</string>
    <string name="sugar">Сахар:</string>
    <string name="badges">Метки:</string>
    <string name="ingredients">Ингредиенты:</string>
    <string name="add">Добавить</string>
    <string name="favourites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="dinner">Обед</string>
    <string name="nightDinner">Ужин</string>
    <string name="lifeStyle">Lifestyle</string>
    <string-array name="graphics_array">
        <item>Калории</item>
        <item>Жиры</item>
        <item>Белки</item>
        <item>Углеводы</item>
    </string-array>
</resources>