<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_notification"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="@+id/tv_notification"
        app:layout_constraintStart_toStartOf="@+id/tv_notification"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification" />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:text="@string/theme"
        app:layout_constraintEnd_toEndOf="@+id/tv_language"
        app:layout_constraintStart_toStartOf="@+id/tv_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_language" />

</androidx.constraintlayout.widget.ConstraintLayout>