<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_baseline_circle_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/v_photo"
        app:layout_constraintTop_toTopOf="@+id/v_photo" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/v_photo"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_profileInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profileInformation"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/v_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_profileInformation" />

    <TextView
        android:id="@+id/tv_weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_weight" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <TextView
        android:id="@+id/tv_heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tv_height"
        app:layout_constraintTop_toTopOf="@+id/tv_height" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/tv_height"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <TextView
        android:id="@+id/tv_genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tv_gender"
        app:layout_constraintTop_toTopOf="@+id/tv_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>