<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner1"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Поиск продуктов"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="380dp"
        android:layout_height="130dp"
        android:background="@drawable/circle"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_food" />

    <TextView
        android:id="@+id/tv_btnSquirrels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squirrels"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/tv_btnFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fats"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_btnCarbohydrates"
        app:layout_constraintStart_toEndOf="@+id/tv_btnSquirrels"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/tv_btnCarbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/tv_squirrels_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_btnSquirrels"
        app:layout_constraintStart_toStartOf="@+id/tv_btnSquirrels"
        app:layout_constraintTop_toBottomOf="@+id/tv_btnSquirrels" />

    <TextView
        android:id="@+id/tv_fats_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_btnFats"
        app:layout_constraintStart_toStartOf="@+id/tv_btnFats"
        app:layout_constraintTop_toBottomOf="@+id/tv_btnFats" />

    <TextView
        android:id="@+id/tv_carbohydrates_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_btnCarbohydrates"
        app:layout_constraintStart_toStartOf="@+id/tv_btnCarbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/tv_btnCarbohydrates" />

    <TextView
        android:id="@+id/tv_eatenAllDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_eatenDinner"
        app:layout_constraintEnd_toEndOf="@+id/tv_squirrels_calc"
        app:layout_constraintStart_toStartOf="@+id/tv_squirrels_calc" />

    <TextView
        android:id="@+id/tv_eatenDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eaten"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/tv_eatenAllDinner"
        app:layout_constraintStart_toStartOf="@+id/tv_eatenAllDinner" />


    <ImageButton
        android:id="@+id/btn_food"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:background="@drawable/circle"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>